# pathtracer

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  Doxyfile  LICENSE  README.md  _utils.py  check_clang_format.py  check_clang_tidy.py  format_all.py  package.py  pathtracer.sln
.github/: FUNDING.yml
.github/workflows/: main.yml
app/: app.cpp  app.h  app.vcxproj  app.vcxproj.filters  endian.h  endian.inl  main.cpp
cmake/: doc_target.Doxyfile  doc_target.cmake  download.cmake  file_embed.h  set_defaults.cmake  test_target_cpp.cmake  vcpkg.cmake  vcpkg.py
pathtrace/: CMakeLists.txt  aabb.cpp  aabb.h  fast_rand.cpp  fast_rand.h  image.cpp  image.h  image.inl  image.tcc  math.cpp  math.h  matrix.cpp  matrix.h  octree.cpp  octree.h  pathtrace.vcxproj  pathtrace.vcxproj.filters  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  serializers.cpp  serializers.h  serializers.inl  shape.cpp  shape.h  sphere.cpp  sphere.h  thread_pool.cpp  thread_pool.h  thread_pool.inl
pathtrace/shapes/: mesh.cpp  mesh.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
pathtracer/: CMakeLists.txt  app.cpp  app.h  endian.h  endian.inl  main.cpp  pathtracer.vcxproj
scenes/: cornell.json  simple_bunny.json
